--- a/views/main/chat.ejs
+++ b/views/main/chat.ejs
@@ -1,42 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= pageTitle %></title>
-    <link rel="stylesheet" href="/css/button.css" />
-    <link rel="stylesheet" href="/css/chat.css" />
-    <link rel="stylesheet" href="/css/main.css" />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title><%= pageTitle %></title>
+  <link rel="stylesheet" href="/css/button.css" />
+  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/chat.css" />
+</head>
+
+<body>
+  <article class="article">
     <div class="button">
       <a href="/" class="buttonlink">
         <span class="button__mask"></span>
         <span class="button__text">Left room</span>
-        <span class="button__text button__text--bis">Left room</span></a
-      >
+        <span class="button__text button__text--bis">Left room</span></a>
     </div>
     <h1 id="roomname" class="roomname"></h1>
     <h1 class="userstitle">Users:</h1>
     <ul id="users" class="userslist"></ul>
-    <ul class="chat-thread" id="chat-messages"></ul>
-    <form class="chat-window" id="chat-form">
-      <input
-        class="chat-window-message"
-        name="chat-window-message"
-        type="text"
-        autocomplete="off"
-        autofocus
-        id="chat-input"
-      />
-    </form>
+  </article>
 
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.4/qs.min.js"
-      integrity="sha512-BHtomM5XDcUy7tDNcrcX1Eh0RogdWiMdXl3wJcKB3PFekXb3l5aDzymaTher61u6vEZySnoC/SAj2Y/p918Y3w=="
-      crossorigin="anonymous"
-    ></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/main.js"></script>
-  </body>
+
+  <article class="article-mobile">
+    <div class="article__menu">
+      <div class="article__hamburger"></div>
+      <div class="article__hamburger"></div>
+      <div class="article__hamburger"></div>
+    </div>
+
+    <ul class="article__list">
+      <li class="article__limark"> &#x274C; &nbsp;</li>
+      <li>
+        <div class="button">
+          <a href="/" class="buttonlink">
+            <span class="button__mask"></span>
+            <span class="button__text">Left room</span>
+            <span class="button__text button__text--bis">Left room</span></a>
+        </div>
+      </li>
+      <li>
+        <h1 id="roomname-mobile" class="roomname"></h1>
+      </li>
+      <li>
+        <h1 class="userstitle">Users:</h1>
+      </li>
+
+      <li>
+        <ul id="users-mobile" class="userslist"></ul>
+      </li>
+    </ul>
+
+
+
+
+  </article>
+
+
+  <ul class="chat-thread" id="chat-messages"></ul>
+  <form class="chat-window" id="chat-form">
+    <input class="chat-window-message" name="chat-window-message" type="text" autocomplete="off" autofocus
+      id="chat-input" />
+  </form>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.4/qs.min.js"
+    integrity="sha512-BHtomM5XDcUy7tDNcrcX1Eh0RogdWiMdXl3wJcKB3PFekXb3l5aDzymaTher61u6vEZySnoC/SAj2Y/p918Y3w=="
+    crossorigin="anonymous"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/main.js"></script>
+</body>
+
 </html>
