--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= pageTitle %></title>
-    <link rel="stylesheet" href="/css/main.css">
-  </head>
-  <body>
-    <main>
-        <img src="../../index-chat.jpg" alt="chat-coffe-talk" class="chat-img">
-        <div class="chat">
-            <form action="/chat"  class="chat-form">
-                <div class="chat-label">
-                    <label for="username"> Your name</label>
-                    <input type="text" name="username" id="chat-input" class="chat-input" placeholder="Your name" required />
-                </div>
-                <div class="chat-label">
-                    <label for="room"> Your room</label>
-                    <input type="text" name="room" id="room-input" class="chat-input" placeholder="Your room"  required />
-                    <button type="submit">Join Room</button>
-                </div>
-                </div>
-              </form>
-        </div>
-      
-    </main>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title><%= pageTitle %></title>
+  <link rel="stylesheet" href="/css/index.css">
+</head>
+
+<body>
+  <main class='main'>
+    <div class='main__img'>
+
+      <h1 class='main__title'>
+        Welcome to ChatCord!
+      </h1>
+      <article class='main__article'>
+        <form action='/chat'>
+
+          <section>
+            <label class='section__label'>
+              Nickname
+            </label>
+            <input type='text' name='username' id='chat-input' class='section__input' required />
+          </section>
+          <section>
+            <label class='section__label'>
+              Room
+            </label>
+            <input type='text' name='room' id='room-input' class='section__input' required />
+          </section>
+          <button type="submit" class='main__button'>
+            <h1 class='main__button__title'>Join Room</h1>
+          </button>
+
+
+
+        </form>
+      </article>
+    </div>
+  </main>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/main.js"></script>
+</body>
+
 </html>
