new refershed version

--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -31,7 +31,7 @@
             </label>
             <input type='text' name='room' id='room-input' class='section__input' required />
           </section>
-          <button type="submit" class='main__button'>
+          <button type="submit" class='main__button' id="main__joinbtn">
             <h1 class='main__button__title focus-in-contract hvr-shutter-out-vertical'>Join Room</h1>
           </button>
 
@@ -41,10 +41,7 @@
       </article>
     </div>
   </main>
-  <script src="/socket.io/socket.io.js"></script>
 
-
-  <script src="/js/main.js"></script>
 </body>
 
 </html>
