--- a/views/main/chat.ejs
+++ b/views/main/chat.ejs
@@ -6,12 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title><%= pageTitle %></title>
   <link rel="stylesheet" href="/css/button.css" />
-  <link rel="stylesheet" href="/css/main.css" />
-  <link rel="stylesheet" href="/css/chat.css" />
+
+
 </head>
 
 <body>
-  <article class="article">
+
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.4/qs.min.js"
+    integrity="sha512-BHtomM5XDcUy7tDNcrcX1Eh0RogdWiMdXl3wJcKB3PFekXb3l5aDzymaTher61u6vEZySnoC/SAj2Y/p918Y3w=="
+    crossorigin="anonymous"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/main.js"></script>
+</body>
+
+</html>
+
+
+<!-- <article class="article">
+
     <div class="button">
       <a href="/" class="buttonlink">
         <span class="button__mask"></span>
@@ -63,13 +77,4 @@
   <form class="chat-window" id="chat-form">
     <input class="chat-window-message" name="chat-window-message" type="text" autocomplete="off" autofocus
       id="chat-input" />
-  </form>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.4/qs.min.js"
-    integrity="sha512-BHtomM5XDcUy7tDNcrcX1Eh0RogdWiMdXl3wJcKB3PFekXb3l5aDzymaTher61u6vEZySnoC/SAj2Y/p918Y3w=="
-    crossorigin="anonymous"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/main.js"></script>
-</body>
-
-</html>
+  </form>  -->
