--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,253 +1,1 @@
-html {
-  font-size: 62.5%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif !important;
-}
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-@media (max-width: 1100px) {
-  html {
-    font-size: 50.5%;
-  }
-}
-
-@media (max-width: 700px) {
-  html {
-    font-size: 45%;
-  }
-}
-
-@media (max-width: 400px) {
-  html {
-    font-size: 35%;
-  }
-}
-
-.main {
-  height: 100vh;
-}
-
-.main__img {
-  background-image: linear-gradient(
-      to right,
-      rgba(25, 147, 147, 0.6),
-      rgba(14, 200, 121, 0.7)
-    ),
-    url('/chat.jpg');
-
-  overflow: hidden;
-  background-position: right;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-}
-
-.main__title {
-  text-align: center;
-  font-size: 6rem;
-  font-weight: 300;
-  color: white;
-  margin-top: 10rem;
-}
-
-.main__article {
-  margin-top: 5rem;
-}
-
-.main__button {
-  border: none;
-  font-size: 4rem;
-  background-color: transparent;
-  color: white;
-  font-weight: 100;
-  margin: auto;
-  display: block;
-  margin-top: 5rem;
-}
-
-.main__button__title {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif !important;
-  font-weight: 100;
-  font-size: 4.3rem;
-}
-
-.main__button:active,
-.main__button:link {
-  outline: none;
-}
-
-.section__input {
-  border: 1px solid black;
-  border-radius: 5rem;
-  font-size: 4.2rem;
-  color: black;
-  display: block;
-  margin: auto;
-  padding: 1rem;
-  margin-top: 1.5rem;
-}
-
-.section__input:focus {
-  outline: none;
-}
-
-.section__label {
-  margin: auto;
-  display: block;
-  width: 50rem;
-  font-size: 4rem;
-  color: white;
-  font-weight: 400;
-}
-
-/* ------------------------------- Animations ------------------------------- */
-
-.focus-in-contract {
-  -webkit-animation: focus-in-contract 1s
-    cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: focus-in-contract 1s
-    cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-}
-
-@-webkit-keyframes focus-in-contract {
-  0% {
-    letter-spacing: 1em;
-    -webkit-filter: blur(12px);
-    filter: blur(12px);
-    opacity: 0;
-  }
-  100% {
-    -webkit-filter: blur(0px);
-    filter: blur(0px);
-    opacity: 1;
-  }
-}
-@keyframes focus-in-contract {
-  0% {
-    letter-spacing: 1em;
-    -webkit-filter: blur(12px);
-    filter: blur(12px);
-    opacity: 0;
-  }
-  100% {
-    -webkit-filter: blur(0px);
-    filter: blur(0px);
-    opacity: 1;
-  }
-}
-
-.tracking-in-expand-fwd-top {
-  -webkit-animation: tracking-in-expand-fwd-top 1.2s
-    cubic-bezier(0.215, 0.61, 0.355, 1) both;
-  animation: tracking-in-expand-fwd-top 1.2s
-    cubic-bezier(0.215, 0.61, 0.355, 1) both;
-}
-
-@-webkit-keyframes tracking-in-expand-fwd-top {
-  0% {
-    letter-spacing: -0.5em;
-    -webkit-transform: translateZ(-700px) translateY(-500px);
-    transform: translateZ(-700px) translateY(-500px);
-    opacity: 0;
-  }
-  40% {
-    opacity: 0.6;
-  }
-  100% {
-    -webkit-transform: translateZ(0) translateY(0);
-    transform: translateZ(0) translateY(0);
-    opacity: 1;
-  }
-}
-@keyframes tracking-in-expand-fwd-top {
-  0% {
-    letter-spacing: -0.5em;
-    -webkit-transform: translateZ(-700px) translateY(-500px);
-    transform: translateZ(-700px) translateY(-500px);
-    opacity: 0;
-  }
-  40% {
-    opacity: 0.6;
-  }
-  100% {
-    -webkit-transform: translateZ(0) translateY(0);
-    transform: translateZ(0) translateY(0);
-    opacity: 1;
-  }
-}
-
-.hvr-shutter-out-vertical {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  background: transparent;
-  -webkit-transition-property: color;
-  transition-property: color;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  padding: 1rem;
-}
-.hvr-shutter-out-vertical:before {
-  content: '';
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: white;
-
-  color: rgba(25, 147, 147, 0.6);
-
-  -webkit-transform: scaleY(0);
-  transform: scaleY(0);
-  -webkit-transform-origin: 50%;
-  transform-origin: 50%;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-.hvr-shutter-out-vertical:hover,
-.hvr-shutter-out-vertical:focus,
-.hvr-shutter-out-vertical:active {
-  border: 1px solid black;
-
-  color: rgba(25, 147, 147, 0.6);
-}
-.hvr-shutter-out-vertical:hover:before,
-.hvr-shutter-out-vertical:focus:before,
-.hvr-shutter-out-vertical:active:before {
-  -webkit-transform: scaleY(1);
-  transform: scaleY(1);
-}
-
-/* ------------------------------ Media queries ----------------------------- */
-
-@media (max-width: 400px) {
-  .main__title {
-    margin-top: 40rem;
-  }
-}
-
-@media (max-width: 325px) {
-  .main__title {
-    margin-top: 2rem;
-  }
-}
+html{font-size:62.5%;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans','Droid Sans','Helvetica Neue',sans-serif!important}*,::after,::before{margin:0;padding:0;box-sizing:border-box}@media (max-width:1100px){html{font-size:50.5%}}@media (max-width:700px){html{font-size:45%}}@media (max-width:400px){html{font-size:35%}}.main{height:100vh}.main__img{background-image:linear-gradient(to right,rgba(25,147,147,.6),rgba(14,200,121,.7)),url(/chat.jpg);overflow:hidden;background-position:right;background-repeat:no-repeat;background-size:cover;width:100%;height:100%}.main__title{text-align:center;font-size:6rem;font-weight:300;color:#fff;margin-top:10rem}.main__article{margin-top:5rem}.main__button{border:none;font-size:4rem;background-color:transparent;color:#fff;font-weight:100;margin:auto;display:block;margin-top:5rem}.main__button__title{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans','Droid Sans','Helvetica Neue',sans-serif!important;font-weight:100;font-size:4.3rem}.main__button:active,.main__button:link{outline:0}.section__input{border:1px solid #000;border-radius:5rem;font-size:4.2rem;color:#000;display:block;margin:auto;padding:1rem;margin-top:1.5rem}.section__input:focus{outline:0}.section__label{margin:auto;display:block;width:50rem;font-size:4rem;color:#fff;font-weight:400}.focus-in-contract{-webkit-animation:focus-in-contract 1s cubic-bezier(.25,.46,.45,.94) both;animation:focus-in-contract 1s cubic-bezier(.25,.46,.45,.94) both}@-webkit-keyframes focus-in-contract{0%{letter-spacing:1em;-webkit-filter:blur(12px);filter:blur(12px);opacity:0}100%{-webkit-filter:blur(0);filter:blur(0);opacity:1}}@keyframes focus-in-contract{0%{letter-spacing:1em;-webkit-filter:blur(12px);filter:blur(12px);opacity:0}100%{-webkit-filter:blur(0);filter:blur(0);opacity:1}}.tracking-in-expand-fwd-top{-webkit-animation:tracking-in-expand-fwd-top 1.2s cubic-bezier(.215,.61,.355,1) both;animation:tracking-in-expand-fwd-top 1.2s cubic-bezier(.215,.61,.355,1) both}@-webkit-keyframes tracking-in-expand-fwd-top{0%{letter-spacing:-.5em;-webkit-transform:translateZ(-700px) translateY(-500px);transform:translateZ(-700px) translateY(-500px);opacity:0}40%{opacity:.6}100%{-webkit-transform:translateZ(0) translateY(0);transform:translateZ(0) translateY(0);opacity:1}}@keyframes tracking-in-expand-fwd-top{0%{letter-spacing:-.5em;-webkit-transform:translateZ(-700px) translateY(-500px);transform:translateZ(-700px) translateY(-500px);opacity:0}40%{opacity:.6}100%{-webkit-transform:translateZ(0) translateY(0);transform:translateZ(0) translateY(0);opacity:1}}.hvr-shutter-out-vertical{display:inline-block;vertical-align:middle;-webkit-transform:perspective(1px) translateZ(0);transform:perspective(1px) translateZ(0);box-shadow:0 0 1px transparent;position:relative;background:0 0;-webkit-transition-property:color;transition-property:color;-webkit-transition-duration:.3s;transition-duration:.3s;padding:1rem}.hvr-shutter-out-vertical:before{content:'';position:absolute;z-index:-1;top:0;bottom:0;left:0;right:0;background:#fff;color:rgba(25,147,147,.6);-webkit-transform:scaleY(0);transform:scaleY(0);-webkit-transform-origin:50%;transform-origin:50%;-webkit-transition-property:transform;transition-property:transform;-webkit-transition-duration:.3s;transition-duration:.3s;-webkit-transition-timing-function:ease-out;transition-timing-function:ease-out}.hvr-shutter-out-vertical:active,.hvr-shutter-out-vertical:focus,.hvr-shutter-out-vertical:hover{border:1px solid #000;color:rgba(25,147,147,.6)}.hvr-shutter-out-vertical:active:before,.hvr-shutter-out-vertical:focus:before,.hvr-shutter-out-vertical:hover:before{-webkit-transform:scaleY(1);transform:scaleY(1)}@media (max-width:400px){.main__title{margin-top:40rem}}@media (max-width:325px){.main__title{margin-top:2rem}}
